// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstancesPage should match snapshot, when items are empties 1`] = `
<div>
  <div
    class="fr-col-12 fr-col-md-6"
  >
    <div
      class="fr-col-12"
    >
      <h1
        data-testid="instances-page-title"
      >
        any-sandbox_title
      </h1>
      <p>
        any-baseline
         
        <div
          data-mockid="SeeAlsoElement"
        />
      </p>
    </div>
    <div
      class="fr-col-12"
    >
      <div>
        TileComponent
      </div>
    </div>
  </div>
</div>
`;

exports[`InstancesPage should match snapshot, when items are not empties 1`] = `
<div>
  <div
    class="fr-col-12 fr-col-md-6"
  >
    <div
      class="fr-col-12"
    >
      <h1
        data-testid="instances-page-title"
      >
        any-sandbox_title
      </h1>
      <p>
        any
         
        <div
          data-mockid="SeeAlsoElement"
        />
      </p>
    </div>
    <div
      class="fr-col-12 fr-mb-3w"
    >
      <div
        data-mockid="CreateInstanceButton"
      />
    </div>
    <div
      class="fr-col-12"
    >
      <div
        data-mockid="InstancesListComponent"
      />
    </div>
  </div>
</div>
`;

exports[`InstancesPage should match snapshot, when the alert component is displayed 1`] = `
<div>
  <div
    class="fr-col-12 fr-col-md-6"
  >
    <div
      class="fr-col-12"
    >
      <h1
        data-testid="instances-page-title"
      >
        any
      </h1>
      <p>
        any-baseline-mock
         
        <div
          data-mockid="SeeAlsoElement"
        />
      </p>
    </div>
    <div
      data-mockid="AlertComponent"
    >
      <div>
        AlertComponent
      </div>
      <div />
    </div>
    <div
      class="fr-col-12 fr-mb-3w"
    >
      <div
        data-mockid="CreateInstanceButton"
      />
    </div>
    <div
      class="fr-col-12"
    >
      <div
        data-mockid="InstancesListComponent"
      />
    </div>
  </div>
</div>
`;
